<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/buttonpanel"
        android:layout_marginBottom="10sp"
        android:background="@drawable/dialogcurved"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <ImageView
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:layout_marginTop="10sp"
            android:background="@drawable/blood"
            android:contentDescription="@string/image"/>


        <LinearLayout
            android:id="@+id/credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:padding="15sp"
            android:layout_marginTop="50sp"
            android:hint="@string/email"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:inputType="textEmailAddress"
            android:maxLength="50"/>


        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round"
            android:padding="15sp"
            android:layout_marginTop="50sp"
            android:hint="@string/password"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"
            android:inputType="textPassword"
            android:maxLength="16"/>


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonmaterial"
        android:layout_margin="10sp">


        <Button
            android:id="@+id/loginbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/login"
            android:textSize="20sp"
            android:textColor="@color/white"/>


    </LinearLayout>


</RelativeLayout>