<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/introtwo">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/circle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:contentDescription="@string/image"/>


    <ImageView
        android:id="@+id/image"
        android:layout_width="190sp"
        android:layout_height="190sp"
        android:src="@drawable/surgeon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75sp"
        android:contentDescription="@string/image"/>


    <LinearLayout
        android:layout_below="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/introtwoheader"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/introtwomain"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_marginTop="30sp"
            android:layout_marginStart="10sp"
            android:layout_marginEnd="10sp"/>

    </LinearLayout>

</RelativeLayout>
