<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_appointment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:padding="10sp"
    tools:context="com.codevars.a2o.Appointment">


    <LinearLayout
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="160sp"
        android:orientation="vertical"
        android:background="@drawable/dialog"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/datetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/round"
            android:entries="@array/convention"
            android:padding="20sp"/>

    </LinearLayout>



    <LinearLayout
        android:id="@+id/time"
        android:layout_below="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="160sp"
        android:orientation="vertical"
        android:background="@drawable/dialog"
        android:gravity="center_horizontal"
        android:layout_marginTop="10sp">

        <TextView
            android:id="@+id/timetext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textStyle="bold"
            android:textSize="30sp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/round"
            android:entries="@array/convention"
            android:padding="20sp"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonmaterial">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/appointment"
            android:textSize="20sp"
            android:textColor="@color/white"/>


    </LinearLayout>


</RelativeLayout>
