<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_donate_disclaimer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10sp"
    android:background="@drawable/wallbackfaded"
    tools:context="com.codevars.a2o.DonateDisclaimer">


    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="320sp"
        android:orientation="vertical"
        android:background="@drawable/dialog"
        android:layout_marginTop="10sp"
        android:gravity="center_horizontal">


        <ImageView
            android:id="@+id/warning"
            android:layout_width="120sp"
            android:layout_height="120sp"
            android:src="@drawable/warning" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20sp"
            android:background="@drawable/dashed"
            android:layout_marginBottom="10sp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/disclaimer"
                android:textSize="20sp"
                android:gravity="left"
                android:textStyle="bold"
                android:paddingLeft="20sp"
                android:paddingTop="15sp"
                />


        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/userverification"
        android:layout_width="match_parent"
        android:layout_height="70sp"
        android:layout_below="@+id/header"
        android:layout_marginTop="10sp"
        android:background="@drawable/dialog">

        <CheckBox
            android:id="@+id/agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/agree"
            android:layout_marginLeft="10sp"
            android:textSize="17sp"
            android:textStyle="bold"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonmaterial">

        <Button
            android:id="@+id/submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textColor="@color/white"/>

    </LinearLayout>



</RelativeLayout>

