<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_otp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"

    tools:context="com.codevars.a2o.VerifyOTP">


    <LinearLayout
        android:id="@+id/sentcontainer"
        android:layout_width="match_parent"
        android:layout_height="220sp"
        android:background="@drawable/dialog"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/otp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/successgreen"
            android:layout_marginTop="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100sp"
            android:background="@drawable/dashed"
            android:layout_marginTop="30sp"
            android:gravity="center">

            <TextView
                android:id="@+id/sentnumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numberexample"
                android:gravity="center"
                android:textSize="30sp"/>

        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/credentials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dialog"
        android:layout_above="@+id/buttonpanel"
        android:layout_below="@+id/sentcontainer"
        android:layout_marginTop="5sp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/imagetimer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/timer"
                android:layout_marginRight="10sp"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:textSize="15sp"/>

            <TextView
                android:id="@+id/resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/holo_red_light"
                android:textStyle="bold"
                android:textSize="15sp"/>


        </LinearLayout>


        <LinearLayout
            android:id="@+id/otpfield"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="bottom">

            <EditText
                android:id="@+id/p1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:ems="3"
                android:inputType="number"
                android:maxLength="2"
                android:gravity="center"/>

            <EditText
                android:id="@+id/p2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:ems="3"
                android:inputType="number"
                android:maxLength="2"
                android:gravity="center"/>

            <EditText
                android:id="@+id/p3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:ems="3"
                android:inputType="number"
                android:maxLength="2"
                android:gravity="center"/>

            <EditText
                android:id="@+id/p4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:ems="3"
                android:inputType="number"
                android:maxLength="1"
                android:gravity="center"/>

        </LinearLayout>


    </LinearLayout>


    <LinearLayout
        android:id="@+id/buttonpanel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttonmaterial"
        android:layout_margin="10sp">

        <Button
            android:id="@+id/otpsubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:text="@string/submit"
            android:textSize="20sp"
            android:textColor="@color/white"/>

    </LinearLayout>


</RelativeLayout>
